# gradco

./: .gitignore  AUTHORS.rst  CITATION  CONTRIBUTING.rst  LICENSE  Makefile  PPI_biogrid_yeast.edgelist  README.md  README.rst  brute_force.py  build_for_linux.sh  directed_graph.cpp  directed_graph.hh  example.py  gradco.py  gradco_module.c  gradco_module.cpp  gradco_python_interface.py  gradco_python_version.py  make_cibuildwheel.sh  make_sdist.sh  matrix.cpp  matrix.hh  ncount2  orca  orca_test.py  presentation.pptx  publish_to_pypi.sh  publish_to_pytest.sh  pypi_description.rst  pyproject.toml  python_count_functions.py  setup.py  tox.ini
c_module/: dense_matrix.cpp  dense_matrix.hh  directed_graph.cpp  directed_graph.hh  gradco_module.cpp  matrix.cpp  matrix.hh  sparse_matrix.cpp  sparse_matrix.hh  symmetric_dense_matrix.cpp  symmetric_dense_matrix.hh
docs/: conf.py  index.rst  installation.rst  usage.rst
generate_tests/: bit_array_to_graphlet_signatures_3nodes.csv  bit_array_to_graphlet_signatures_4nodes.csv  generate_unit_test_code.py  generate_unit_test_code_orbit_adjacency.py  orca
gradco/: __init__.py  gradco_module.c
gradco_c_module/: gradco_module.cpp
integration_tests/: orca_mac
orientation/: degenerate.py
test/: test_A10_10_orca.py  test_A10_11_orca.py  test_A10_9_orca.py  test_A11_10_orca.py  test_A11_9_orca.py  test_A12_12_orca.py  test_A12_13_orca.py  test_A13_12_orca.py  test_A13_13_orca.py  test_A14_14_orca.py  test_A1_1_orca.py  test_A1_2_orca.py  test_A2_1_orca.py  test_A3_3_orca.py  test_A4_4_orca.py  test_A4_5_orca.py  test_A5_4_orca.py  test_A5_5_orca.py  test_A6_6_orca.py  test_G4.py  (+16 more)
(+27 files in other folders)
