[build-system]
requires = ["setuptools>=61.0", "wheel>=0.31.0", "twine>=1.11.0", "Cython", "numpy>=1.26.4"]
build-backend = "setuptools.build_meta"

# [project]
# name = "Gradco"
# version = "0.0.1"
# authors = [
#   { name="Sam F. L. Windels", email="sam.windels@gmail.com" },
# ]
# description = "Counts Graphlet Adjacency matrices"
# readme = "README.md"
# requires-python = ">=3.10"
# classifiers = [
#     "Programming Language :: Python :: 3",
#     "License :: OSI Approved :: MIT License",
#     "Operating System :: OS Independent",
# ]
