# Documentation: 
#    - https://setuptools.pypa.io/en/latest/userguide/ext_modules.html
#    - https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = ["setuptools>=61.0", "wheel>=0.31.0", "cython", "numpy>=1.26.4,<2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gradco" # Name in pypi: pip install gradco
version="0.1.6"
description="GRaphlet-orbit ADjacency COunter (GRADCO)."
readme = "README.rst"
requires-python='>=3.10'
dependencies = [
    "scipy",
    "numpy>=1.26.4,<2.0"
]
authors = [{name = "Sam F. L. Windels", email = "sam.windels@bsc.es"}]
maintainers = [{name = "Sam F. L. Windels", email = "sam.windels@bsc.es"}]
license = {file = "LICENSE"}
keywords = ["graphlets", "motifs", "network analysis", "graph",
	    "bioinformatics", "systems biology"]

[tool.cibuildwheel]
test-requires = ["pytest", "matplotlib", "networkx"] # testing + debugging 
test-command = "pytest {project}/tests"
